[package]
name = "docker-registry-api"
version = "0.1.1"
authors = ["Sébastien Santoro <dereckson@espace-win.org>"]
edition = "2018"

[dependencies]
env_logger = "^0.10.0"
lazy_static = "^1.4.0"
limiting-factor = { version="^0.7.2", features = ["minimal"] }
log = "^0.4.14"
regex = "^1.5.4"
rocket = "^0.4.11"
rocket_codegen = "^0.4.11"
serde = "^1.0.151"
serde_derive = "^1.0.11"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]
